--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -34,6 +34,10 @@ AdvancedGroupHeader="Advanced Encoding Settings"
 VideoEncoderSettings="Video Settings"
 AudioEncoderSettings="Audio Settings"
 
+# Stats panel
+TotalBitrate="Total Bitrate: %.2f Mbit/s"
+DroppedFrames="Dropped Frames: %llu / %llu (%.2f%%)"
+
 # Errors and warnings
 MainOutputNotActive="Unable to start output. \nThis output is configured to use your main encoder's output (Built-in stream), which is not currently active.\nPlease start your main encoder first."
 MainOutputEncoderIndexNotFound="Unable to start output. \nThis output is configured to use your main encoder's output (Built-in stream), with an encoder index that does not have an encoder.\nPlease select an encoder index that has an encoder."
