Name change, further removals, and notices of changes
Changed to `Multistream Libre` from `Aitum Multistream` to make it coherent the divergent changes.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,7 +1,8 @@
-Aitum="Aitum"
-AitumMultistream="Aitum Multistream"
-AitumMultistreamSettings="Aitum Multistream Settings"
-AitumMultistreamDonate="Support Aitum"
+; Modified by Adachi Sakura, 2026-02-21: Added TotalBitrate and DroppedFrames locale strings
+Aitum="Multistream Libre"
+AitumMultistream="Multistream Libre"
+AitumMultistreamSettings="Multistream Libre Settings"
+AitumMultistreamDonate="Source Code"
 MainCanvas="Main Canvas"
 BuiltinStream="Built-in stream"
 Stream="Stream"
@@ -41,24 +42,23 @@ DroppedFrames="Dropped Frames: %llu / %llu (%.2f%%)"
 # Errors and warnings
 MainOutputNotActive="Unable to start output. \nThis output is configured to use your main encoder's output (Built-in stream), which is not currently active.\nPlease start your main encoder first."
 MainOutputEncoderIndexNotFound="Unable to start output. \nThis output is configured to use your main encoder's output (Built-in stream), with an encoder index that does not have an encoder.\nPlease select an encoder index that has an encoder."
-NewVersion="New version (%1) available <a href='https://aitum.tv/download/multi/'>here</a>"
 NoVerticalWarning="<strong>Aitum Vertical is not installed, or is out of date.<br /><a href='https://aitum.tv/download/vertical/'>Click here</a> to download the latest version.</strong>"
 
 # Config dialog
-WelcomeTitle="Welcome to Aitum Multistream!"
+WelcomeTitle="Welcome to Multistream Libre!"
 WelcomeText="Multistreaming from OBS just got a whole lot easier.\n\nTo start configuring your outputs for both the main canvas and the vertical canvas (if you use Vertical), click one of the buttons below.\n\nIf you need help, please visit the help page for more information."
 SettingsMainOutputsButton="Main Outputs"
 SettingsVerticalOutputsButton="Vertical Outputs"
 SettingsHelpButton="Help"
-SupportButton="Support Aitum"
+SupportButton="About"
 
 # Support Page
-SupportTitle="Supporting Aitum"
-SupportText="Aitum Multistream is provided free by the Aitum Team for <u>you, the streaming community</u>.<br /><br />Your support is essential in helping us to continue our journey of making useful tools that empower creators to make awesome content.<br /><br />If our tools have helped streamline your workflows, enabled your channel to grow or even inspired you to start crearting content, please consider supporting our team.<br /><br /><strong><a href='https://merch.aitum.tv/pages/donations'>Support the Aitum Team</a></strong>"
+SupportTitle="About Multistream Libre"
+SupportText="Multistream Libre is a community fork of <a href='https://github.com/aitum/obs-aitum-multistream'>Aitum Multistream</a> for OBS Studio, distributed under the GNU General Public License v2 (GPL-2.0).<br /><br />Original plugin by the <a href='https://aitum.tv'>Aitum team</a>."
 
 # Help Page
-HelpTitle="Getting Help with Aitum Multistream"
-HelpText="As Aitum Multistream has only just released, we have yet to discover the burning issues from the community.<br /><br />In the coming weeks after launch, an update will be released linking a dedicated troubleshooter for Multistream.<br /><br />Until then, <strong><a href='https://aitum.tv/discord'>please join our Discord to discuss Multistream & Report issues!</a></strong>"
+HelpTitle="Getting Help"
+HelpText="For issues or help with Multistream Libre, please refer to the project's source code repository.<br /><br />For questions about Aitum Vertical integration, please visit <a href='https://aitum.tv'>aitum.tv</a>."
 
 # Main canvas
 SettingsMainCanvasTitle="Main Canvas"
@@ -66,8 +66,8 @@ SettingsMainCanvasDescription="You can manage your Main Canvas (the default canv
 
 # Output dialog
 OutputName="Output Name"
-NewOutputWindowTitle="Aitum Multistream: Add New Output"
-EditOutputWindowTitle="Aitum Multistream: Edit Output"
+NewOutputWindowTitle="Multistream Libre: Add New Output"
+EditOutputWindowTitle="Multistream Libre: Edit Output"
 NewOutputSelectService="Please select the service/site that your new output will use. If your new service isn't listed, please select \"other\"."
 OtherService="Other Service"
 
@@ -91,8 +91,8 @@ YouTubeStreamKeyInfo="Please enter your stream key, you can find this on your <a
 
 # TikTok Output Dialog
 TikTokOutput="TikTok Output"
-TikTokServiceInfo="Please complete the following fields to add a new TikTok output.<br /><strong>Note: If you do not have access to a stream key, you will not be able to use Aitum Multistream to send an output to Tiktok. We also cannot provide stream keys/access.</strong>"
-TikTokServiceInfoEdit="Please complete the following fields to edit this TikTok output.<br /><strong>Note: If you do not have access to a stream key, you will not be able to use Aitum Multistream to send an output to Tiktok. We also cannot provide stream keys/access.</strong>"
+TikTokServiceInfo="Please complete the following fields to add a new TikTok output.<br /><strong>Note: If you do not have access to a stream key, you will not be able to stream to TikTok. Stream keys/access must be obtained directly from TikTok.</strong>"
+TikTokServiceInfoEdit="Please complete the following fields to edit this TikTok output.<br /><strong>Note: If you do not have access to a stream key, you will not be able to stream to TikTok. Stream keys/access must be obtained directly from TikTok.</strong>"
 TikTokServer="TikTok Server"
 TikTokServerInfo="Please enter your stream server, you can find this on your <a href='https://livecenter.tiktok.com/producer'>TikTok Live Center</a>."
 TikTokStreamKey="TikTok Stream Key"
