Added service JoystickTV
Added Joystick.TV as a service in this wizard. Finishing rebranding.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -134,6 +134,15 @@ KickServerInfo="The stream server URL is preset for Kick, you do not need to cha
 KickStreamKey="Kick Stream Key"
 KickStreamKeyInfo="Please enter your stream key, you can find this in your <a href='https://kick.com/dashboard/settings/stream'>Kick Creator Dashboard</a>."
 
+# Joystick.TV Output Dialog
+JoystickTVOutput="Joystick.TV Output"
+JoystickTVServiceInfo="Please complete the following fields to add a new Joystick.TV output."
+JoystickTVServiceInfoEdit="Please complete the following fields to edit this Joystick.TV output."
+JoystickTVServer="Joystick.TV Server"
+JoystickTVServerInfo="Pick your closest Joystick.TV server."
+JoystickTVStreamKey="Joystick.TV Stream Key"
+JoystickTVStreamKeyInfo="Please enter your stream key, you can find this in your <a href='https://joystick.tv/stream-settings'>Joystick.TV Stream Settings</a>."
+
 # Custom Output Dialog
 CustomOutput="Custom Output"
 CustomServiceInfo="Please complete the following fields to add a new output."
