Fixed malformed emoji symbol.
Fixed malformed emoji and added my name with a link to the repo to the bottom of the config panel.

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -17,7 +17,7 @@ Help="Help"
 AddOutput="Add Output"
 Unnamed="Unnamed"
 Version="Version"
-MadeBy="made with ♡ by"
+MadeBy="made with ♥ by"
 VideoEncoder="Video Encoder"
 VideoEncoderIndex="Video Encoder Index"
 AudioEncoder="Audio Encoder"
